# TWIZZY

./: .env.example  .gitignore  API_KEY_SETUP.md  IMPROVEMENTS.md  OPENCLAW_IDEAS.md  Package.swift  README.md  pyproject.toml
TwizzyApp/: ContentView.swift  TwizzyApp.swift
TwizzyApp.app/Contents/: Info.plist
TwizzyApp/MenuBar/: MenuBarView.swift
TwizzyApp/Models/: Message.swift
TwizzyApp/Services/: AgentBridge.swift  AgentService.swift
TwizzyApp/Views/: ChatView.swift  PermissionsView.swift  SettingsView.swift
config/: permissions.json
config/launchd/: com.twizzy.agent.plist
config/prompts/: system.txt
scripts/: install.sh  setup-api-key.py  twizzy-doctor.py  twizzy-kill.sh  twizzy-start.sh
src/browser/: __init__.py  controller.py  snapshot.py
src/canvas/: __init__.py  canvas.py  renderer.py
src/core/: __init__.py  agent.py  cache.py  config.py  context_manager.py  conversation_store.py  conversation_summarizer.py  error_handler.py  health.py  logging_config.py  memory.py  metrics.py  permissions.py  rate_limiter.py
src/core/ipc/: __init__.py  (+1 more)
src/daemon/: __init__.py  main.py
src/doctor/: __init__.py  checks.py  doctor.py
src/gateway/: __init__.py  channel.py  gateway.py
src/improvement/: __init__.py  analyzer.py  generator.py  git_auto_commit.py  rollback.py  scheduler.py
src/plugins/: __init__.py  base.py  registry.py
src/scheduler/: __init__.py  scheduler.py  triggers.py
src/skills/: __init__.py  loader.py  registry.py  skill.py
src/voice/: __init__.py  stt.py  tts.py  wake_word.py
src/web/: __init__.py  app.py  websocket.py
(+26 files in other folders)
