[project]
name = "twizzy"
version = "0.1.0"
description = "Self-improving autonomous Mac agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyobjc-framework-Cocoa>=10.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
